*gitlab-ce-8.12.0_rc6 (21 Sep 2016)

  21 Sep 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.12.0_rc6.ebuild,
  -gitlab-ce-8.12.0_rc4.ebuild, gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce:  - updated ebuild fot 8.12.0-rc4 to 8.12.0-rc6 - updated
  dependencies in 8.12.0-rc6 and 9999

*gitlab-ce-8.12.0_rc4 (18 Sep 2016)

  18 Sep 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.12.0_rc4.ebuild,
  -gitlab-ce-8.12.0_rc3.ebuild:
  www-apps/gitlab-ce:  added ebuild for gitlab-ce-8.12.0_rc4 with Ruby 2.3
  support

*gitlab-ce-8.11.6 (18 Sep 2016)

  18 Sep 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.11.6.ebuild:
  www-apps/gitlab-ce:  added ebuild for gitlab-ce-8.11.6

*gitlab-ce-8.12.0_rc2 (11 Sep 2016)

  11 Sep 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.12.0_rc2.ebuild,
  -gitlab-ce-8.11.0_rc1.ebuild:
  www-apps/gitlab-ce:  added ebuild for version 8.12.0_rc2 and deleted old
  version 8.11.0_rc1

*gitlab-ce-8.11.5 (08 Sep 2016)

  08 Sep 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.11.5.ebuild:
  www-apps/gitlab-ce:  added ebuild for gitlab-ce-8.11.5

*gitlab-ce-8.11.4 (02 Sep 2016)

  02 Sep 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.11.4.ebuild,
  gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce:  added ebuild for www-apps/gitlab-ce-8.11.4. this version
  should fix the update migration issue that was introduced with the 8.11.0
  ebuild.

*gitlab-ce-8.11.3 (30 Aug 2016)

  30 Aug 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.11.3.ebuild:
  www-apps/gitlab-ce:  added ebuild for gitlab-ce-8.11.3 which contains various
  fixes

*gitlab-ce-8.11.2 (29 Aug 2016)

  29 Aug 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.11.2.ebuild:
  www-apps/gitlab-ce:  added ebuild for gitlab-ce-8.11.2

  22 Aug 2016; Manuel Friedli <manuel@fritteli.ch> gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce:  updated ebuild for gitlab-9999 (git master)

  22 Aug 2016; Manuel Friedli <manuel@fritteli.ch> -gitlab-ce-8.10.1.ebuild,