@@ -1,3 +1,8 @@
+*gitlab-ce-8.12.0 (23 Sep 2016)
+
+  23 Sep 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.12.0.ebuild:
+  www-apps/gitlab-ce:  added ebuild for version 8.12.0
+
 *gitlab-ce-8.12.0_rc6 (21 Sep 2016)
 
   21 Sep 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.12.0_rc6.ebuild,
